<resources>
    <string name="app_name">My Application</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">LOG IN</string>
    <string name="remember_for_30_days">Remember for 30 days</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="Sign_In">Sign in</string>
    <string name="account">ACCOUNT</string>
    <string name="create_an">Create an</string>
    <string name="todo">TODO</string>
    <string name="Sign_Up">Sign Up\n</string>
    <string name="what_can_i_help_with">What can I help with?</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="open">Open</string>
    <string name="close">Close\n</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="logout">Logout</string>
    <string name="generate_music">Generate Music</string>
    <string name="facial_recognise">Facial Recognise</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close\n</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="menu_button">Menu Button</string>
    <string name="menu">MENU</string>
    <string name="try_out_now">Try Out Now!</string>
    <string name="current_email_user_example_com">Current Email: user@example.com</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_new_email">Confirm New Email\n</string>
    <string name="generating_music">Generating Music…</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="detected_emotion">Detected Emotion:</string>
    <string name="confirm_emotion">Confirm Emotion</string>
    <string name="change_emotion">Change Emotion</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="main_logo">Main Logo</string>
    <string name="camera_circle">camerapeople</string>
    <string name="back_button">Back Button</string>
    <string name="user_logo">user logo</string>
    <string name="email_logo">email logo</string>
    <string name="pass_logo">password</string>
    <string name="loading">Loading…</string>
    <string name="play_music">Play Music</string>
    <string name="download_music">Download Music</string>
    <string name="emotion_none">Emotion: None</string>
    <string name="retake">Retake</string>
    <string name="detecting">Detecting...</string>
    <string name="detect_emotion">Detect Emotion</string>
    <string name="play_midi">Play MIDI</string>
    <string name="download_midi">Download MIDI</string>
    <string name="open_drawer">Open Menu\n</string>
    <string name="close_drawer">Close Menu</string>
    <string name="retry">Retry</string>
</resources>