<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/background_gradient">

    <ImageView
    android:layout_width="150dp"
    android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/main_logo"
    android:src="@drawable/mainlogo">


    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        android:textSize="40sp">

    </TextView>
    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:background="@drawable/rounded_textbox"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:background="@drawable/rounded_textbox"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:background="@drawable/rounded_textbox"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:padding="12dp"
        android:textColor="#FFF"
        android:fontFamily="@font/raleway"
        android:background="@drawable/rounded_input"
        android:layout_marginTop="20dp"/>
</LinearLayout>
