<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:text="@string/save_changes"
        android:fontFamily="@font/raleway"
        android:clickable="true"
        android:background="@drawable/rounded_input"/>

</LinearLayout>
