<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background_gradient">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_out_now"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/btnGenerateMusic"
            android:layout_width="170dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/generate_music"
            android:background="@drawable/rounded_input"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/hamburger"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/hamburger_icon"
            android:contentDescription="@string/menu_button" />

        <!-- "MENU" Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/raleway"
            android:text="@string/menu"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
