<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_facial">

    <TextView
        android:id="@+id/emotionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generating_music"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/prgessbar"
        android:layout_below="@id/emotionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/confirmEmotionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_emotion"
        android:layout_below="@id/emotionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_below="@id/confirmEmotionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
